--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -256,6 +256,12 @@ jobs:
           echo "Waiting 60 seconds for GitHub release assets to propagate..."
           sleep 60
 
+      - name: Install Homebrew (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+          echo "/home/linuxbrew/.linuxbrew/bin" >> $GITHUB_PATH
+
       - name: Tap and install via Homebrew
         run: |
           brew tap abacusnoir/smelter
