--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -244,23 +244,13 @@ jobs:
   test-homebrew-installation:
     name: Test Homebrew Installation
     needs: [create-release, upload-install-script]
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        os: [macos-latest, ubuntu-latest]
+    runs-on: macos-latest
 
     steps:
       - name: Wait for release assets to propagate
         run: |
           echo "Waiting 60 seconds for GitHub release assets to propagate..."
           sleep 60
-
-      - name: Install Homebrew (Linux)
-        if: runner.os == 'Linux'
-        run: |
-          /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-          echo "/home/linuxbrew/.linuxbrew/bin" >> $GITHUB_PATH
 
       - name: Tap and install via Homebrew
         run: |
