--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -289,13 +289,23 @@ jobs:
 
       - name: Wait for release assets to propagate
         run: |
-          echo "Waiting 30 seconds for GitHub release assets to propagate..."
-          sleep 30
+          echo "Waiting 60 seconds for GitHub release assets to propagate..."
+          sleep 60
 
       - name: Install via install script
         run: |
           VERSION="${{ needs.create-release.outputs.version }}"
-          curl -fsSL "https://github.com/${{ github.repository }}/releases/download/${VERSION}/install.sh" -o /tmp/install.sh
+
+          # Retry install script download up to 3 times with exponential backoff
+          for i in 1 2 3; do
+            if curl -fsSL "https://github.com/${{ github.repository }}/releases/download/${VERSION}/install.sh" -o /tmp/install.sh; then
+              echo "✓ Downloaded install script"
+              break
+            fi
+            echo "Attempt $i failed, waiting..."
+            sleep $((i * 10))
+          done
+
           bash /tmp/install.sh
           export PATH="$HOME/.local/bin:$PATH"
           echo "$HOME/.local/bin" >> $GITHUB_PATH
